@@ -1227,7 +1227,7 @@ article{Breslow72,
 
 @article{Kent98,
    author={Kent, J. T. and O'{Q}uigley},
-   title= {Measures of dependence for censored data.}
+   title= {Measures of dependence for censored data},
    journal=biok, volume=75, pages={525--34},
    year={1998}
 }
